Add dummy controller
